--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ button{
 	padding: 10px 20px;
 	margin-top: 10px;
 }
-.div {
+.event_block {
 	border: 2px solid red;
 	text-align: center;
 	padding: 20px 40px;
