--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ h1 {
 }
 .wrap	{
 	text-align: center;
+	margin: 40px 0;
+}
+.background {
+	background-color: #e1e1e1;
+	padding: 30px;
 }
 form {
 
