--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
+#popup {
+	position: fixed;
+	opacity: 0;
+	display: none;
+	top: 0;left:0;
+	width: 100%;
+	height: 100%;
+	align-items: center;
+	justify-content: center;
+	background: rgba(0,0,0,0.8)
+}
+.popup {
+	text-align: center;
+	background: blue;
+	color: #eee;
+	padding: 5px;
+	height: 100%;
+	width: 300px;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
 h1 {
 	text-align: center;
 	color: red;
@@ -8,7 +30,9 @@ h1 {
 }
 .background {
 	background-color: #e1e1e1;
+	border: 1px solid black;
 	padding: 30px;
+	margin: 5px;
 }
 form {
 
