--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-// text not selected css
+/* text not selected css */
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
