--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
 } 
- 
+ BreakpointObserver // media in ts '@angular/cdk/layout';
 /* text three dot no wrap */
 text-overflow: ellipsis;
 white-space: nowrap; 
