--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,14 @@ BreakpointObserver // media query in ts '@angular/cdk/layout';
 /* text three dot no wrap */
 text-overflow: ellipsis;
 white-space: nowrap; 
-overflow: hidden; 
+overflow: hidden;
+
+/* Dynamic */
+overflow: hidden;
+display: -webkit-box;
+-webkit-line-clamp: 1;
+-webkit-box-orient: vertical;
+max-height: 3.2rem;
 
 /* Scroll smooth */ 
 html {
